# KOMP

./: .gitignore  Cargo.toml  README.md  config.example.toml  erez.prototype.toml  komp.prototype.toml
.cargo/: config.toml
.github/workflows/: ubuntu.yml
apps/komp-desktop/: package-lock.json  package.json
apps/komp-desktop/src/: app.js  index.html  styles.css
apps/komp-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/komp-desktop/src-tauri/src/: main.rs
crates/erez-cli/: Cargo.toml
crates/erez-cli/src/: main.rs
crates/erez-core/: Cargo.toml
crates/erez-core/src/: audio.rs  config.rs  dynamic_actions.rs  events.rs  executor.rs  intent.rs  lib.rs  lmstudio.rs  normalize.rs  pipeline.rs  plugins.rs  scenario.rs  stt.rs
crates/erez-core/tests/: pipeline.rs
crates/erez-daemon/: Cargo.toml
crates/erez-daemon/src/: main.rs  tts.rs
docs/: COSYVOICE_FINETUNE_RU.md
plugins.example/: system.toml  system_monitor.toml
plugins.example/scenarios/Goida/: scenario.toml
plugins.example/scenarios/battery_status/: scenario.toml
plugins.example/scenarios/browser_quieter/: scenario.toml
plugins.example/scenarios/choose_browser/: scenario.toml
plugins.example/scenarios/close_window/: scenario.toml
plugins.example/scenarios/hello/: scenario.toml
plugins.example/scenarios/minimize_window/: scenario.toml
plugins.example/scenarios/restart/: scenario.toml
plugins.example/scenarios/shutdown/: scenario.toml
plugins.example/scenarios/weather/: scenario.toml
plugins.user/scenarios/calculator/: scenario.toml
plugins.user/scenarios/currency_converter/: scenario.toml
scripts/: auto-update-git-windows.ps1  auto-update-git.sh  ensure-rust.sh  install-linux-deps.sh  prepare-cosyvoice-finetune.py  run-daemon-live-linux.sh  run-daemon-live-macos.sh  run-prototype-linux.sh  run-prototype-macos.sh  run-prototype-windows.ps1  setup-cosyvoice-windows.ps1  setup-cosyvoice.sh  setup-vosk-linux.sh  setup-vosk-macos.sh  setup-vosk-windows.ps1  setup-xtts-windows.ps1  setup-xtts.sh  verify-linux.sh
services/cosyvoice/: server.py
services/xtts/: server.py
sounds/: README.md
