[package]
name = "erez-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
erez-core = { path = "../erez-core" }
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
vosk-stt = ["erez-core/vosk-stt"]
